--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,10 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
+          <configuration>
+            <release>19</release> <!-- <release>13/14/15</release> -->
+            <compilerArgs>--enable-preview</compilerArgs>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
